force-app/main/default/objects/Alumni__c/Alumni__c.object-meta.xml
<CustomObject>
    <label>Alumni</label>
    <nameField>
        <label>Alumni Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumnies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>