force-app/main/default/objects/Alumni__c/fields/Alumni_Details__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alumnies</relationshipLabel>
    <relationshipName>Alumnies</relationshipName>
    <type>Lookup</type>
</CustomField>