force-app/main/default/objects/Alumni__c/fields/Alumni_No__c.field-meta.xml
<CustomField>
    <fullName>Alumni_No__c</fullName>
    <displayFormat>A-{00000}</displayFormat>
    <label>Alumni No</label>
    <type>AutoNumber</type>
</CustomField>