force-app/main/default/objects/Alumni__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Details</label>
    <referenceTo>ContactP__c</referenceTo>
    <relationshipLabel>Alumnies</relationshipLabel>
    <relationshipName>Alumnies</relationshipName>
    <type>Lookup</type>
</CustomField>