force-app/main/default/objects/Alumni__c/fields/Got_an_Offer__c.field-meta.xml
<CustomField>
    <fullName>Got_an_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Got an Offer</label>
    <type>Checkbox</type>
</CustomField>